--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# REACT_APP_PUBLIC_SERVER_URL = 'http://192.168.100.253:5001/'
-REACT_APP_PUBLIC_SERVER_URL = 'https://gapbor-server.onrender.com/'
+REACT_APP_PUBLIC_SERVER_URL = 'http://192.168.100.253:5001/'
+# REACT_APP_PUBLIC_SERVER_URL = 'https://gapbor-server.onrender.com/'
 
 # REACT_APP_PUBLIC_SERVER_URL = 'http://44.211.193.206:5001/'
 REACT_APP_GAP_BOR_SEO_ID='64ccea3bd1a52d2ed6ee1e48'
